<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_theme"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_30dp"
            android:paddingBottom="@dimen/_20dp">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20dp"
                android:elevation="@dimen/_10dp"
                android:src="@drawable/icon_drops" />


            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_field_height"
                android:background="@drawable/rectangle_bg"
                android:drawableRight="@android:drawable/ic_menu_search"
                android:drawablePadding="@dimen/_10dp"
                android:elevation="@dimen/_10dp"
                android:hint="@string/gst_no"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editName"
                style="@style/TextInputEdit"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editMobile"
                style="@style/NumberInputEdit"
                android:layout_marginTop="@dimen/_20dp"
                android:elevation="@dimen/_10dp"
                android:ems="10"
                android:hint="@string/mobile_no"
                android:maxLength="10"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editEmailId"
                style="@style/TextInputEdit"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_field_height"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/rectangle_bg"
                android:elevation="@dimen/_10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/btnsignin"
                android:layout_marginTop="@dimen/_20dp"
                android:elevation="@dimen/_10dp"
                android:text="@string/save_profile"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>

