<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_theme"
    android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/editAddress"
        android:layout_width="347dp"
        android:layout_height="@dimen/edit_field_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_bg"
        android:elevation="@dimen/_10dp"
        android:textAlignment="center"
        android:hint="@string/enter_address"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="347dp"
        android:layout_height="@dimen/edit_field_height"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_bg"
        android:elevation="@dimen/_10dp"
        android:textAlignment="center"
        android:hint="@string/enter_city"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <EditText
        android:id="@+id/editState"
        android:layout_width="347dp"
        android:layout_height="@dimen/edit_field_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_bg"
        android:elevation="@dimen/_10dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_state"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toBottomOf="@+id/editCity" />

    <EditText
        android:id="@+id/editPincode"
        android:layout_width="347dp"
        android:layout_height="@dimen/edit_field_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_bg"
        android:elevation="@dimen/_10dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_pincode"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toBottomOf="@+id/editState" />

    <Button
        android:id="@+id/btnSaveAddress"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="44dp"
        android:background="@drawable/btnsignin"
        android:elevation="@dimen/_10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editPincode"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/editPincode"
        app:layout_constraintTop_toBottomOf="@+id/editPincode" />
</android.support.constraint.ConstraintLayout>

