<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_theme"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/lyHeader"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_40dp"
        android:elevation="@dimen/_10dp"
        android:src="@drawable/icon_drops" />-->


    <LinearLayout
        android:id="@+id/lytTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">


            <EditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_field_height"
                android:background="@drawable/rectangle_bg"
                android:elevation="@dimen/_10dp"
                android:gravity="center_horizontal"
                android:hint="@string/mobile_no"
                android:inputType="text"
                android:maxLength="35"
                android:maxLines="1"
                android:paddingVertical="@dimen/_10dp"
                android:paddingLeft="@dimen/_10dp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_field_height"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/rectangle_bg"
                android:elevation="@dimen/_10dp"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingVertical="@dimen/_10dp"
                android:paddingLeft="@dimen/_10dp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/btnsignin"
                android:elevation="@dimen/_10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/login_label"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textForgetPswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10dp"
                android:padding="@dimen/_10dp"
                android:text="@string/forgot_pswd"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAddSeller"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/btnsignup"
                android:elevation="@dimen/_10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/add_seller"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

